# elasticc2

./: CNN_PLAsTiCC_LCs_Images.ipynb  CNN_afterGaussianProcess.ipynb  LICENSE  README.md  best_model_gp.h5  config.yaml  debug_pixelize.ipynb  demo_elasticc2.ipynb  demo_elasticc2.py  get_target_name.py  interpolate.py  pixelize.py  pyproject.toml  run.py
archive/: Untitled.ipynb  elasticc_SNguess.ipynb  model_jonas.ipynb  pixelize.py  target_stats.ipynb  test.py  understand_RiseDeclineStat.ipynb
archive/models/second_stage/A/: grid_result_niter_200_nsample_30000  model_stage_2a_niter_200_nsample_20000  model_stage_2a_niter_200_nsample_30000
archive/models/second_stage/B/: model_stage_2b_niter_200_nsample_30000
archive/workshop/: CNN_afterGaussianProcess_XGBoost.ipynb  debug_periodicity.ipynb  get_target_name.py
data/: train_format_gp_labels.npy
elasticc/: debug_run.ipynb  run.py  run_xgboost.py  train_models.py  trainmodel_elasticc2.py
elasticc/models/second_stage/A/: grid_result_niter_200_nsample_10000  grid_result_niter_200_nsample_20000  grid_result_niter_200_nsample_60000  model_stage_2a_niter_200_nsample_10000  (+1 more)
elasticc2/: run.py  taxonomy.py  train_binary_model.py  train_model.py  train_models.py  train_multivar_model.py  trainmodel_elasticc2.py  utils.py
elasticc2/models/first_stage/: grid_result_niter_200_nsample_60000  model_stage_1_niter_200_nsample_60000
preprocess/: combine_risedec.py  manual_elasticc_risedecline.py  process_features.py  process_features_step2.py  risedecline_split.py
workshop/: CNN_afterGaussianProcess.ipynb  best_model.h5
(+7 files in other folders)
