[tool.poetry]
name = "elasticc2"
version = "0.1.0"
description = ""
authors = ["Simeon Reusch <simeon.reusch@desy.de>", "Jakob Nordin <jakob.nordin@desy.de>", "Julian Schliwinski <julian.schliwinski@desy.de>"]
license = "BSD-3-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
joblib = "^1.2.0"
matplotlib = "^3.7.1"
numpy = "^1.24.3"
pandas = "^2.0.2"
xgboost = "^1.7.5"
scikit-learn = "^1.2.2"
isort = "^5.12.0"
pyarrow = "^12.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
mypy = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"